--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center_vertical"
     android:background="#F5F5F5"
     tools:context=".MainActivity">
 
     <com.erif.cardvoucher.CardVoucher
-        android:layout_width="300dp"
-        android:layout_height="130dp"
-        android:layout_centerInParent="true" />
+        android:layout_width="match_parent"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_height="150dp" />
 
-</RelativeLayout>
+    <com.erif.cardvoucher.CardRinggik
+        android:layout_width="match_parent"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="25dp"/>
+
+</LinearLayout>
